fix event title too long display issue

--- a/client/src/app/event/event.component.scss
+++ b/client/src/app/event/event.component.scss
@@ -59,7 +59,7 @@ $primary-color:#003e7e;
     }
 
     h4{
-      width:180px;
+      // width:180px;
       padding-left:5px;
       padding-top:8px;
       height: 40px;
